--- a/src/Resources/views/Performance/index.html.twig
+++ b/src/Resources/views/Performance/index.html.twig
@@ -146,9 +146,16 @@
                 reviewForms: reviewForms|default({})
             } %}
         {% endif %}
+        
+        {# Include dependency modal #}
+        {% include '@NowoPerformanceBundle/Performance/components/_dependency_modal.html.twig' %}
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
+    <script>
+        // Make missingDependencies available to JavaScript
+        window.missingDependencies = {{ missingDependencies|json_encode|raw }};
+    </script>
 {% else %}
     <div class="min-h-screen bg-gray-50 py-8">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
