feat: Display Messenger availability status in performance view
- Added a check in the performance view to display a warning if the Symfony Messenger is not installed.
- This enhancement improves user awareness of missing dependencies in the performance metrics.

--- a/src/Resources/views/Collector/performance.html.twig
+++ b/src/Resources/views/Collector/performance.html.twig
@@ -42,6 +42,14 @@
                     {% endif %}
                 </span>
             </div>
+            {% if collector.async is not defined or not collector.async %}
+                {% if dependencyStatus.messenger is defined and not dependencyStatus.messenger.available %}
+                    <div class="sf-toolbar-info-piece">
+                        <b>Messenger</b>
+                        <span style="color: #f57c00;">⚠ Not installed</span>
+                    </div>
+                {% endif %}
+            {% endif %}
             {% if collector.tableName %}
                 <div class="sf-toolbar-info-piece">
                     <b>Table</b>
