--- a/src/Resources/views/Performance/index.html.twig
+++ b/src/Resources/views/Performance/index.html.twig
@@ -148,7 +148,7 @@
         {% endif %}
         
         {# Include dependency modal #}
-        {% include '@NowoPerformanceBundle/Performance/components/_dependency_modal.html.twig' %}
+        {% include '@NowoPerformanceBundle/Performance/components/_dependency_modal.html.twig' with {template: template} %}
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
